examples/test/testpolicy16397.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16397
  namespace: namespace436
spec:
  podSelector:
    matchLabels:
      key8: value17
      key1: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value33
      podSelector:
        matchLabels:
          key31: value46
          key10: value46
          key8: value45
